# Worldcup-ranker

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: import_check.py
src/worldcup_ranker/: __init__.py  analytics.py  cli.py  db.py  match_utils.py  merge.py  models.py  normaliser.py  pipeline.py  ranking.py  storage.py  webapp.py
src/worldcup_ranker/ingest/: __init__.py  csv_adapter.py  soccerdata_adapter.py  wiki_adapter.py
src/worldcup_ranker/metrics/: __init__.py  base.py  mean_top_league_position.py
tests/: conftest.py  test_analytics.py  test_matchup.py  test_ranking.py
