[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-ranker"
version = "0.1.0"
description = "World Cup team and player ranking utilities"
authors = [ { name = "Samuel" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = []

[project.optional-dependencies]
plotting = ["pandas>=1.5", "plotly>=5.0"]
soccerdata = ["soccerdata"]
fuzzy = ["rapidfuzz"]
